
<resources>
    <string name="app_name">androidpractise</string>
    <string name="txt_name">John McDonalds</string>
    <string name="city">Los Angles,CA</string>
    <string name="num1">34</string>
    <string name="post">Posts</string>
    <string name="num2">1256</string>
    <string name="follower">Followers</string>
    <string name="about">About</string>
    <string name="bio">Him poetic eye.Searched any remedies.Trail.Was poverty a schsmes him he tressing mountain
    and as surprisse haven\'t subject and could a entered would in the of be not
    posts ,doing the never publication legs .</string>

</resources>