<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_name"
        android:textSize="@dimen/dimen_24dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/dimen_8dp"
        android:text="@string/txt_name"
        android:layout_marginTop="@dimen/dimen_24dp"/>
    <ImageView
        android:id="@+id/map"
        android:src="@drawable/ic_location_on_black_24dp"
        android:layout_width="@dimen/dimen_16dp"
        android:layout_height="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@+id/text_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/dimen_24dp"/>
    <TextView
        android:id="@+id/city_name"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        app:layout_constraintLeft_toRightOf="@+id/map"
        app:layout_constraintTop_toBottomOf="@+id/text_name"/>
    <ImageView
        android:id="@+id/cartoon_image"
        android:layout_marginRight="@dimen/dimen_2dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_width="@dimen/dimen_128dp"
        android:layout_height="@dimen/dimen_160dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/text_name"
        android:src="@drawable/cartoon"/>
    <Button
        android:id="@+id/button_name"
        android:layout_width="@dimen/dimen_128dp"
        android:layout_height="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_80dp"
        app:layout_constraintTop_toBottomOf="@+id/map"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/dimen_24dp"
        android:text="follow"
        android:background="@drawable/buttonbackground"
        android:textColor="@android:color/white"/>
    <TextView
        android:id="@+id/txt_num1"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_name"
        android:layout_marginLeft="@dimen/dimen_40dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/num1"/>

    <TextView
        android:id="@+id/txt_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_40dp"
        android:text="@string/post"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_num1" />

    <TextView
        android:id="@+id/num2"
        android:textStyle="bold"
        android:paddingLeft="@dimen/dimen_80dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button_name"
        app:layout_constraintLeft_toRightOf="@+id/txt_num1"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_num1"
        android:text="@string/num2"/>
    <TextView
        android:id="@+id/txt_follower"
        android:paddingLeft="@dimen/dimen_80dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/num2"
        app:layout_constraintLeft_toLeftOf="@+id/num2"

        android:text="@string/follower"/>
    <ImageView
    app:layout_constraintHorizontal_chainStyle="packed"
    android:id="@+id/f1"
    android:layout_width="@dimen/dimen_64dp"
    android:layout_height="@dimen/dimen_80dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/txt_post" app:layout_constraintRight_toLeftOf="@+id/f2"
    android:layout_marginTop="@dimen/dimen_32dp"
    android:src="@drawable/f1"/>

    <ImageView
        android:id="@+id/f2"
        android:layout_width="@dimen/dimen_64dp"
        android:layout_height="@dimen/dimen_80dp"
        android:src="@drawable/f2"
        app:layout_constraintBottom_toBottomOf="@+id/f1"
        app:layout_constraintLeft_toRightOf="@+id/f1"
        app:layout_constraintRight_toLeftOf="@+id/f3"/>
    <ImageView
        android:id="@+id/f3"
        android:layout_width="@dimen/dimen_64dp"
        android:layout_height="@dimen/dimen_80dp"
        android:src="@drawable/f3"
        app:layout_constraintBottom_toBottomOf="@+id/f2"
        app:layout_constraintLeft_toRightOf="@+id/f2"
        app:layout_constraintRight_toLeftOf="@id/f4"/>

    <ImageView
        android:id="@+id/f4"
        android:layout_width="@dimen/dimen_64dp"
        android:layout_height="@dimen/dimen_80dp"
        android:src="@drawable/f4"
        app:layout_constraintBottom_toBottomOf="@+id/f3"
        app:layout_constraintLeft_toRightOf="@+id/f3"
        app:layout_constraintRight_toLeftOf="@id/f5" />

    <ImageView
        android:id="@+id/f5"
        android:src="@drawable/f5"
        android:layout_width="@dimen/dimen_64dp"
        android:layout_height="@dimen/dimen_80dp"
        app:layout_constraintBottom_toBottomOf="@id/f4"
        app:layout_constraintLeft_toRightOf="@id/f4"
        app:layout_constraintRight_toRightOf="parent"/>
    <ImageView
        app:layout_constraintHorizontal_chainStyle="spread"
        android:id="@+id/linkedin"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_width="@dimen/dimen_16dp"
        android:layout_height="@dimen/dimen_16dp"
        android:src="@drawable/ic_linkedin_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f1"
        app:layout_constraintRight_toLeftOf="@id/facebook"/>
    <ImageView
        android:id="@+id/facebook"
        android:src="@drawable/ic_facebook_logo"
        android:layout_width="@dimen/dimen_16dp"
        android:layout_height="@dimen/dimen_16dp"
        app:layout_constraintLeft_toRightOf="@+id/linkedin"
        app:layout_constraintBottom_toBottomOf="@id/linkedin"
        app:layout_constraintRight_toLeftOf="@id/youtube"/>
    <ImageView
        android:id="@+id/youtube"
        android:src="@drawable/ic_iconfinder_youtube_1217126"
        android:layout_width="@dimen/dimen_16dp"
        android:layout_height="@dimen/dimen_16dp"
        app:layout_constraintLeft_toRightOf="@id/facebook"
        app:layout_constraintBottom_toBottomOf="@id/facebook"
        app:layout_constraintRight_toLeftOf="@id/behance"/>
    <ImageView
        android:id="@+id/behance"
        android:src="@drawable/ic_iconfinder_77_behance_104426"
        android:layout_width="@dimen/dimen_16dp"
        android:layout_height="@dimen/dimen_16dp"
        app:layout_constraintLeft_toRightOf="@id/youtube"
        app:layout_constraintBottom_toBottomOf="@id/youtube"
        app:layout_constraintRight_toLeftOf="@id/twitter"/>
    <ImageView
        android:id="@+id/twitter"
        android:src="@drawable/ic_iconfinder_198_twitter_192156"
        android:layout_width="@dimen/dimen_16dp"
        android:layout_height="@dimen/dimen_16dp"
        app:layout_constraintLeft_toRightOf="@id/behance"
        app:layout_constraintBottom_toBottomOf="@id/behance"
        app:layout_constraintRight_toRightOf="parent"/>
    <ImageView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linkedin"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:src="@drawable/baseline"/>
    <TextView
        android:id="@+id/txt_about"
        android:textStyle="bold"
        android:textSize="@dimen/dimen_24dp"
        android:text="@string/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"/>
    <TextView
        android:id="@+id/txt_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_24dp"
        android:layout_marginRight="@dimen/dimen_8dp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_about"
        android:text="@string/bio"/>











</androidx.constraintlayout.widget.ConstraintLayout>